<resources>
    <string name="app_name" translatable="false">Manager Usaha</string>
    <string name="home">Beranda</string>
    <string name="stok">Stok</string>
    <string name="riwayat">Riwayat</string>
    <string name="lainnya">Lainnya</string>
    <string name="omset">Omset</string>
    <string name="untung">Untung</string>
    <string name="data_hari_ini">Data Hari Ini</string>
    <string name="stok_masuk">Stok Masuk</string>
    <string name="stok_keluar">Stok Keluar</string>
    <string name="bintang" translatable="false">*</string>
    <string name="laporan_keuangan">Laporan Keuangan</string>
    <string name="cari_sesuai_nama">Cari Sesuai Nama</string>
    <string name="barang">Barang</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="pengaturen">Pengaturan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="panduan_penggunaan">Panduan Penggunaan</string>
    <string name="back_to">Back to</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="kuantitas">Kuantitas</string>
    <string name="harga_mdl">Harga Modal</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="gambar_brg">Gambar Barang</string>
    <string name="isi_dsn">Isi disini</string>
    <string name="tambah">Tambah</string>
    <string name="batal">Batal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="cth_air_mineral">Cth: Air Mineral</string>
    <string name="_34">34</string>
    <string name="cth_34">Cth: 34</string>
    <string name="rp_0">Rp. 0</string>
    <string name="edit_barang">Edit Barang</string>
    <string name="update">Update</string>
    <string name="hapus">Hapus</string>
    <string name="xxxxx">xxxxx</string>
    <string name="laporan">Laporan</string>
    <string name="total_pendapatan">Total Pendapatan</string>
    <string name="harian">Harian</string>
    <string name="mingguan">Mingguan</string>
    <string name="bulanan">Bulanan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="proyek_ini_adalah_aplikasi_manajemen_bisnis_berbasis_android_yang_dirancang_untuk_membantu_pengusaha_umkm_mengelola_usaha_mereka_secara_lebih_efektif_aplikasi_ini_mencakup_fitur_seperti_pengelolaan_stok_barang_pencatatan_transaksi_masuk_dan_keluar_barang_serta_laporan_keuntungan_secara_terstruktur_dengan_memanfaatkan_teknologi_berbasis_android_aplikasi_ini_diakses_dengan_mudah_melalui_perangkat_smartphone_sehingga_pengusaha_dapat_memantau_bisnis_mereka_kapan_saja_dan_di_mana_saja_sistem_akan_memproses_data_yang_dimasukkan_pengguna_seperti_stok_barang_harga_dan_transaksi_untuk_menghasilkan_informasi_terkini_yang_mendukung_pengambilan_keputusan_bisnis">Proyek ini adalah aplikasi manajemen bisnis berbasis Android yang dirancang untuk membantu pengusaha UMKM mengelola usaha mereka secara lebih efektif. Aplikasi ini mencakup fitur seperti pengelolaan stok barang, pencatatan transaksi masuk dan keluar barang, serta laporan keuntungan secara terstruktur. Dengan memanfaatkan teknologi berbasis Android, aplikasi ini diakses dengan mudah melalui perangkat smartphone, sehingga pengusaha dapat memantau bisnis mereka kapan saja dan di mana saja. Sistem akan memproses data yang dimasukkan pengguna, seperti stok barang, harga, dan transaksi, untuk menghasilkan informasi terkini yang mendukung pengambilan keputusan bisnis.</string>
    <string name="_1_0_1_5_26_2025">1.0.1 (5/26/2025)</string>
    <string name="versi">Versi</string>
    <string name="keb_priv">Kebijakan Privasi</string>
    <string name="data_bulan_ini">Data Bulan Ini</string>
    <string name="hubungi_developer">Hubungi Developer</string>
    <string name="_1_menambahkan_barang">1. Menambahkan barang</string>
    <string name="_1P">Ke halaman barang lalu click tombol tambah barang, dihalaman barang isi semua yang yang tertera dan jika belum buat kategori click plus (+) untuk tambahkan kategori.</string>
    <string name="_2_menambah_stok_barang">2. Menambah Stok barang</string>
    <string name="_2P">Ke halaman beranda lalu click tombol stok masuk, pilih barang yang anda ingin tambah stoknyasetelah selesai edit click tombol ok.</string>
    <string name="_3_mengurangi_stok_barang">3. Mengurangi Stok barang</string>
    <string name="_3P">Ke halaman beranda lalu click tombol stok keluar, pilih barang yang anda ingin kurangi stoknya, setelah selesai edit click tombol ok.</string>
    <string name="_4_mengedit_barang">4. Mengedit barang</string>
    <string name="_4P">Ke halaman barang lalu click barang yang anda ingin edit, setelah selesai edit click tombol ok</string>
    <string name="_5P">Ke halaman barang lalu click (-) yang ada di kiri barang yang anda ingin hapus, setelah itu click tombol ok</string>
    <string name="_1K"><![CDATA[• Data Barang: nama, kategori, stok, harga, barcode, gambar.\n• Riwayat Transaksi: tanggal, jumlah, tipe.\n• Izin kamera & storage untuk fitur scan dan gambar.]]></string>
    <string name="_2K"><![CDATA[Data digunakan untuk manajemen inventaris, laporan stok, perhitungan omzet & keuntungan, serta fitur scan barcode.]]></string>
    <string name="_4_penyimpanan_keamanan"><![CDATA[4. Penyimpanan & Keamanan]]></string>
    <string name="_5K"><![CDATA[• CAMERA: scan barcode\n• STORAGE: pilih & tampilkan gambar produk]]></string>
    <string name="bulan">Bulan</string>
    <string name="minggu">Minggu</string>
    <string name="hari">Hari</string>
</resources>