<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:background="@drawable/gradient_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/default_judul"
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!--  code contennt or button  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/h_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="234dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul">

        <!--   Code in here     -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tot_display"
            android:layout_width="match_parent"
            android:layout_height="186dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_rad_back"
            app:layout_constraintBottom_toTopOf="@+id/btn_panduan_penggunaan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/total_pendapatan"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tot_display" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/harian"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/mingguan"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/rp_0"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <FrameLayout
                android:id="@+id/frameLayout7"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="58dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/rp_0"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_marginStart="7dp"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/frameLayout7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <FrameLayout
                android:id="@+id/frameLayout8"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="58dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="7dp"
                android:text="@string/bulanan"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/frameLayout8"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/rp_0"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/frameLayout8"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        


        <Button
            style="@style/default_button"
            android:id="@+id/btn_panduan_penggunaan"
            android:layout_marginBottom="12dp"
            android:textColor="@color/black"
            android:background="@color/light_blue"
            android:text="@string/panduan_penggunaan"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_pengaturan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            style="@style/default_button"
            android:id="@+id/btn_pengaturan"
            android:layout_marginBottom="12dp"
            android:background="@color/medium_blue"
            android:text="@string/pengaturen"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_laporan_keuangan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            style="@style/default_button"
            android:id="@+id/btn_laporan_keuangan"
            android:layout_marginBottom="28dp"
            android:background="@color/bold_blue"
            android:text="@string/kebijakan_privasi"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>