<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StokFragment"
    android:paddingHorizontal="20dp">

    <TextView
        style="@style/default_judul_nobold"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barang"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/search_wrap"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_wrap"
        android:layout_width="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.TextInputEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/cari_sesuai_nama"
        android:textColorHint="@color/grey_bold"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconContentDescription="Search icon"
        android:background="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_in"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/g_b_outline"
            android:inputType="text"
            android:paddingStart="48dp"
            android:paddingEnd="2dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/g_b_outline"
        app:layout_constraintBottom_toBottomOf="@+id/search_wrap"
        app:layout_constraintStart_toEndOf="@+id/search_wrap">
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button2"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/g_b_outline"
        android:drawableEnd="@drawable/ic_plus"
        android:paddingHorizontal="19dp"
        android:text="@string/tambah_barang"
        app:layout_constraintStart_toStartOf="@+id/search_wrap"
        app:layout_constraintTop_toBottomOf="@+id/search_wrap" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/g_b_outline"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button2" >
        <Spinner
            android:id="@+id/filter_spinner"
            android:layout_width="130dp"
            android:layout_height="44dp"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_wrap"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>